--- a/index.html
+++ b/index.html
@@ -3,32 +3,38 @@
         <title>Workspace Components</title>
         <link href="/dist/output.css" rel="stylesheet">
     </head>
-    <body class="antialiased font-body">
+    <body class="antialiased font-body text-dark">
         <nav class="w-full bg-gray-100">
             <h1>Tailwind Components</h1>
         </nav>
-        <section class="w-full h-full bg-blue-200">
+        <section class="w-full h-full bg-slate">
             <div id="content" class="w-4/5 flex flex-col gap-8 mx-auto bg-blue-200 h-full">
-                <div class="w-1/5 h-auto mt-4">
+                <div class="w-1/5 h-auto flex flex-col gap-6 mt-4">
                     <div id="card-form" class="w-full bg-white rounded-lg p-6 drop-shadow-xl">
                         <label class="text-sm font-medium">Create New Card</h1>
-                        <input type="text" class="block w-full h-36 rounded-lg mt-4 border border-slate-600"/>
+                        <input type="text" class="block w-full h-36 rounded-lg mt-4 border border-dark-secondary p-5" placeholder="What is the task?"/>
                         <div id="tags" class="flex flex-row gap-5 mt-6">
                             <div class="w-6 h-6"></div>
-                            <div class="rounded-3xl font-medium text-xs px-4 py-2 bg-blue-200 text-blue-600">
+                            <div class="rounded-3xl font-medium text-xs px-4 py-2 bg-info text-info-dark">
                                 UI Design
                             </div>
                             <div class="w-6 h-6"></div>
                         </div>
-                        <hr class="h-px my-4 bg-gray-200 border-0 dark:bg-gray-700">
+                        <hr class="h-px my-4 bg-dark-secondary border-0">
                         <div id="users" class="flex flex-row gap-5 mb-6">
                             <div class="w-6 h-6"></div>
-                            <div class="rounded-3xl font-medium text-xs px-4 py-2 bg-blue-200 text-blue-600">
+                            <div class="rounded-3xl font-medium text-xs px-4 py-2 bg-info text-info-dark">
                                 UI Design
                             </div>
                             <div class="w-6 h-6"></div>
                         </div>
-                        <button class="block w-full py-3 bg-blue-500 rounded-lg">Done</button>
+                        <button class="block w-full py-3 bg-purple-secondary text-white rounded-lg">Done</button>
+                    </div>
+                    <div id="card-form" class="w-full flex flex-col gap-4 bg-white rounded-lg p-6 drop-shadow-xl">
+                        <div class="rounded-3xl font-medium text-xs px-4 py-2 bg-info text-info-dark">
+                            UI Design
+                        </div>
+                        <p class="text-xs leading-5">Membuat konsep ilustrasi untuk halaman homepage dan about us</p>
                     </div>
                 </div>
             </div>
