fix: stylesheet path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Workspace Components</title>
-        <link href="/dist/output.css" rel="stylesheet">
+        <link href="./dist/output.css" rel="stylesheet">
     </head>
     <body class="antialiased font-body text-dark">
         <section class="w-full h-full bg-slate">
